feat: documentacao find by email
