# src/controller/find_user.go
@@ -12,18 +12,18 @@ import (
 	"go.uber.org/zap"
 )
 
-// FindUserByID retrieves user information based on the provided user ID.
-// @Summary Find User by ID
-// @Description Retrieves user details based on the user ID provided as a parameter.
+// FindUserByEmail retrieves user information based on the provided email.
+// @Summary Find User by Email
+// @Description Retrieves user details based on the email provided as a parameter.
 // @Tags Users
 // @Accept json
 // @Produce json
-// @Param userId path string true "ID of the user to be retrieved"
+// @Param userEmail path string true "Email of the user to be retrieved"
 // @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
 // @Success 200 {object} response.UserResponse "User information retrieved successfully"
 // @Failure 400 {object} rest_err.RestErr "Error: Invalid user ID"
 // @Failure 404 {object} rest_err.RestErr "User not found"
-// @Router /getUserById/{userId} [get]
+// @Router /getUserByEmail/{userEmail} [get]
 func (uc *userControllerInterface) FindUserByID(c *gin.Context) {
 	logger.Info("Iniciando Pesquisa por ID", zap.String("journey", "findUserByID"))
 
@@ -48,6 +48,18 @@ func (uc *userControllerInterface) FindUserByID(c *gin.Context) {
 	c.JSON(http.StatusOK, view.ConvertDomainToResponse(userDomain))
 }
 
+// FindUserByEmail retrieves user information based on the provided user Email.
+// @Summary Find User by Email
+// @Description Retrieves user details based on the user Email provided as a parameter.
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param userEmail path string true "Email of the user to be retrieved"
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Success 200 {object} response.UserResponse "User information retrieved successfully"
+// @Failure 400 {object} rest_err.RestErr "Error: Invalid user Email"
+// @Failure 404 {object} rest_err.RestErr "User not found"
+// @Router /getUserById/{userId} [get]
 func (uc *userControllerInterface) FindUserByEmail(c *gin.Context) {
 	logger.Info("Iniciando Pesquisa por Email", zap.String("journey", "FindUserByEmail"))
 
